--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,21 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "./index.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/"
-      }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "./index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "methods": ["OPTIONS", "GET", "POST", "PUT", "DELETE"], // Додайте всі методи, які ви хочете підтримувати
+      "headers": {
+        "Access-Control-Allow-Origin": "https://4min-frontend.vercel.app",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE",
+        "Access-Control-Allow-Headers": "Content-Type"
+      },
+      "dest": "/"
+    }
+  ]
 }
